# Cpp_CmakeCourse

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py  conanfile.txt  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d422163b96683743ed3963d4aac17747.html  files.html  globals.html  globals_func.html  index.html  main_8cc.html  my__lib_8cc.html  my__lib_8h.html  my__lib_8h_source.html  pyrightconfig.json  vcpkg.json
.github/workflows/: documentation.yml  macos.yml  pre-commit.yml  ubuntu.yml  windows.yml
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake  CPM.cmake  ConfigSafeGuards.cmake  Docs.cmake  LTO.cmake  Sanitizers.cmake  Tools.cmake  Warnings.cmake
configured/: CMakeLists.txt  config.hpp.in
docs/: Doxyfile
docs/html/: dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d422163b96683743ed3963d4aac17747.html  files.html  globals.html  globals_func.html  index.html  main_8cc.html  my__lib_8cc.html
docs/html/search/: files_0.js
docs/latex/: files.tex  main_8cc.tex  my__lib_8cc.tex  my__lib_8h.tex  my__lib_8h_source.tex  refman.tex
pre-commit-windows/: .pre-commit-config.yaml
search/: all_0.js  files_0.js  functions_0.js  functions_1.js
src/: CMakeLists.txt
src/my_lib/: CMakeLists.txt  my_lib.cc  my_lib.h  my_lib.hpp
tests/: CMakeLists.txt  main.cc
